--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Header</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -50,7 +52,7 @@
 					<b>and many more...</b></p>
 					<div class="bto">
 						<button class="btn"><a href="#">Read More ...</a></button>
-						<button class="cv"><a href="Kiruthika.pdf" download target="_">Download CV</a></button>
+						<button class="cv"><a href="./Kiruthika.pdf"  download>Download CV</a></button>
 					</div>
 					
 					<div class="home-soci">
@@ -86,8 +88,8 @@
 						<div class="slide swiper-slide">
 							<h2>EDUCATION</h2>
 							<div class="education">
-								<div class="row">
-									<div class="col col-sm-6 col-12 mb-1">
+								<div class="row1">
+									<div class="col1">
 										<div>
 											<h2>Master Of Computer Application</h2>
 											<small>[2017 - 2019]</small>
@@ -95,7 +97,7 @@
 											<h6>Mannampandal</h6>
 										</div>
 									</div>
-									<div class="col col-sm-6 col-12">
+									<div class="col1">
 										<div>
 											<h2>Bachaler Of Computer Application</h2>
 											<small>[2014 - 2017]</small>
@@ -103,7 +105,7 @@
 											<h6>Mannampandal</h6>
 										</div>
 									</div>
-									<div class="col col-sm-6 col-12">
+									<div class="col1">
 										<div>
 											<h2>12<sup>th</sup></h2>
 											<small>[2013 - 2014]</small>
@@ -111,7 +113,7 @@
 											<h6>Mayiladuthurai</h6>
 										</div>
 									</div>
-									<div class="col col-sm-6 col-12">
+									<div class="col1">
 										<div>
 											<h2>10<sup>th</sup></h2>
 											<small>[2011 - 2012]</small>
@@ -125,8 +127,8 @@
 						</div>
 						<div class="slide swiper-slide">
 							<h2>Certificate & Workshop</h2>
-							<div class="certificate row">
-								<div class="col col-sm-6 col-12">
+							<div class="certificate">
+								<div class="col2">
 									<div>
 										<h2>Corporate Training Test</h2>
 										<small>[3-Days]</small>
@@ -134,7 +136,7 @@
 										<h6>Chennai</h6>	
 									</div>	
 								</div>
-								<div class="col col-sm-6 col-12">
+								<div class="col2">
 									<div>
 										<h2>Android(Workshop)</h2>
 										<small>[1-Days]</small>
@@ -142,7 +144,7 @@
 										<h6>Chennai</h6>
 									</div>	
 								</div>	
-								<div class="col col-sm-6 col-12">
+								<div class="col2">
 									<div>
 										<h2>Web Development(Inplant Training)</h2>
 										<small>[5-Days]</small>
@@ -166,7 +168,7 @@
 			
 			<div class="row">
 			<h1 class="title">My <span class="letter">Skills</span></h1>
-				<div class="technical-bars  col col-sm-6 col-12">
+				<div class="technical-bars  col col-xs-12 col-sm-12 col-md-6">
 					<h3>Technical Skills</h3>
 					<div class="bar">
 						<i style="color:#c95d2e;" class="icon fa-brands fa-html5"></i>
@@ -174,7 +176,7 @@
 							<span>HTML5</span><span class="HTML5">95%</span>
 						</div>
 						<div class="progress-line html5">
-							<span></span>
+							<progress value="95" max="100"></progress>
 						</div>
 					</div>
 					<div class="bar">
@@ -183,16 +185,16 @@
 							<span>CSS3</span><span class="CSS3">85%</span>
 						</div>
 						<div class="progress-line css3">
-							<span></span>
+							<progress value="85" max="100"></progress>
 						</div>
 					</div>
 					<div class="bar">
 						<i style="color:#7F00FF;" class="icon fa-brands fa-bootstrap"></i>
 						<div class="info">
-							<span>Bootstrap</span><span class="Bootstrap">80%</span>
+							<span>Bootstrap</span><span class="Bootstrap">60%</span>
 						</div>
 						<div class="progress-line bootstrap">
-							<span></span>
+							<progress value="60" max="100"></progress>
 						</div>
 					</div>
 					<div class="bar">
@@ -201,7 +203,7 @@
 							<span>JavaScript</span><span class="JavaScript">75%</span>
 						</div>
 						<div class="progress-line javascript">
-							<span></span>
+							<progress value="75" max="100"></progress>
 						</div>
 					</div>
 					<div class="bar">
@@ -210,7 +212,7 @@
 							<span>React</span><span class="React">50%</span>
 						</div>
 						<div class="progress-line react">
-							<span></span>
+							<progress value="50" max="100"></progress>
 						</div>
 					</div>
 					<div class="bar"> <!-- style="color:lightgray;" -->
@@ -219,14 +221,14 @@
 							<span>SQL</span><span class="SQL">60%</span>
 						</div>
 						<div class="progress-line sql">
-							<span></span>
+							<progress value="60" max="100"></progress>
 						</div>
 					</div>
 				</div>
-				<div class="profesional col">
+				<div class="profesional col col-xs-12 col-sm-12 col-md-6">
 					<h3>Professional Skills</h3>
 					<div class="radial-bars row">
-						<div class="radial-bar col col-sm-6 col-12">
+						<div class="radial-bar col col-sm-6 col-md-6 col-12">
 							<svg x="0px" y="0px" viewBox="0 0 200 200">
 								<circle class="progress-bar" cx="100" cy="100" r="80"></circle>
 								<circle class="path path-1" cx="100" cy="100" r="80"></circle>
@@ -236,7 +238,7 @@
 							<div class="percentage">80%</div>
 							<div class="text">Creativity</div>
 						</div>
-						<div class="radial-bar col col-sm-6 col-12">
+						<div class="radial-bar col col-sm-6 col-md-6 col-12">
 							<svg x="0px" y="0px" viewBox="0 0 200 200">
 								<circle class="progress-bar" cx="100" cy="100" r="80"></circle>
 								<circle class="path path-2" cx="100" cy="100" r="80"></circle>
@@ -244,7 +246,7 @@
 							<div class="percentage">50%</div>
 							<div class="text">Communication</div>
 						</div>
-						<div class="radial-bar col col-sm-6 col-12">
+						<div class="radial-bar col col-sm-6 col-md-6 col-12">
 							<svg x="0px" y="0px" viewBox="0 0 200 200">
 								<circle class="progress-bar" cx="100" cy="100" r="80"></circle>
 								<circle class="path path-3" cx="100" cy="100" r="80"></circle>
@@ -252,7 +254,7 @@
 							<div class="percentage">75%</div>
 							<div class="text">Problem Solving</div>
 						</div>
-						<div class="radial-bar col col-sm-6 col-12">
+						<div class="radial-bar col col-sm-6 col-md-6 col-12">
 							<svg x="0px" y="0px" viewBox="0 0 200 200">
 								<circle class="progress-bar" cx="100" cy="100" r="80"></circle>
 								<circle class="path path-4" cx="100" cy="100" r="80"></circle>
@@ -323,7 +325,7 @@
 		<!-- ------------- FOOTER ---------------------- -->
 		<footer><small>Copyright ©2024 All rights reserved | This template is made with by Kiruthika</small></footer>
 		</section>
-		
+		<a href="#" class="top"><i class="fa-solid fa-arrow-up"></i></a>
 	</div>
 	
 </body>
