Update resume tag

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<b>and many more...</b></p>
 					<div class="bto">
 						<button class="btn"><a href="#">Read More ...</a></button>
-						<button class="cv"><a href="./Kiruthika.pdf"  download>Download CV</a></button>
+						<button class="cv"><a href="./KIRUTHIKA B.pdf"  download>Download CV</a></button>
 					</div>
 					
 					<div class="home-soci">
